--- a/Sesion2JDTR.Rmd
+++ b/Sesion2JDTR.Rmd
@@ -29,3 +29,86 @@ planets_df <- data.frame(name, type, diameter, rotation, rings)
 planets_df
 ```
 
+Seleccion 
+```{r}
+
+planets_df [1,3]
+planets_df [4,]
+planets_df [1:5,]
+planets_df [1:5,"rotation"]
+
+planets_df $name
+rings_vector <- planets_df$rings
+rings_vector
+
+planets_df[rings_vector,]
+planets_df[!rings_vector,]
+
+
+planets_df[rings_vector,]
+
+subset (planets_df, subset = diameter < 1)
+
+```
+
+
+Sorting
+
+```{r}
+
+a <- c(100,10,100)
+
+b <- order (a)
+a[order(a)]
+
+a
+
+b <- a[order(a)]
+b
+
+positions <- order(planets_df$diameter)
+positions
+planets_df
+```
+```{r}
+positions
+
+planets_df[positions,]
+```
+
+LISTAS
+
+```{r}
+
+my_vector <- 1:10
+
+my_matrix <- matrix (1:9, ncol = 3)
+
+my_df <- planets_df[1:4,]
+
+my_list <- list (my_vector, my_matrix, my_df)
+my_list
+
+```
+
+Creating a named list
+
+```{r}
+
+names(my_list) <- c("vector","Matrix", "data frame")
+my_list
+```
+
+Selecting elements from a list
+
+```{r}
+
+
+my_list [[3]]
+my_list [[1]][4]
+my_list [[2]][2,2]
+my_list [[2]][2,]
+my_list [[3]][2:3,1:2]
+my_list [[3]][2:3,c("rotation","rings")]
+```
+
