--- a/Sesion4JDTR.Rmd
+++ b/Sesion4JDTR.Rmd
@@ -124,4 +124,39 @@ for (t in temp){
 }
 
 ```
+Lapply and anonymous functions
+
+```{r}
+(function (x) {3*x})(9)
+
+pioneers <- c("GAUSS:1777","BAYES:1702","PASCAL:1623", "PEARSON:1857")
+split <- strsplit (pioneers, split = ":")
+split
+
+split_low <- lapply (split, tolower)
+split_low <- lapply (split, toupper)
+split_low
+
+names <- lapply (split_low, function(x){x[1]})
+names
+
+years <- lapply (split_low, function (x){x[2]})
+years
+```
+
+use lapply with additional arguments
+
+```{r}
+
+select_el <- function(x, index){
+  x[index]
+}
+
+names <- lapply (split_low, select_el, 1)
+
+names
+
+years <- lapply (split_low, select_el, 2)
+years
+```
 
