--- a/Sesion5JDTR.Rmd
+++ b/Sesion5JDTR.Rmd
@@ -94,3 +94,32 @@ ggplot(gapminder_1952, aes (x=pop, y=lifeExp, color=continent))+
 ```
 
 
+```{r}
+gapminder 
+gapminder_1952
+ggplot(gapminder_1952, aes (x=pop, y=lifeExp, color=continent, size=gdpPercap))+
+  geom_point()+
+  scale_x_log10()
+
+
+```
+```{r}
+gapminder_1952 <- gapminder  %>%
+  filter (year==1952)
+gapminder_1952
+ggplot(gapminder_1952, aes (x=pop, y=lifeExp))+
+  geom_point()+
+  scale_x_log10()+
+  facet_wrap(~continent)
+
+```
+```{r}
+ggplot(gapminder, aes (x=gdpPerCap, y=lifeExp))+
+  geom_point()+
+  scale_x_log10()+
+  facet_wrap(~year)
+
+gapminder
+
+```
+
