--- a/Sesion6JDTR.Rmd
+++ b/Sesion6JDTR.Rmd
@@ -156,3 +156,97 @@ counties%>%
   
 ```
 
+The count verb
+
+```{r}
+library(dplyr)
+counties
+counties_selected <- counties%>%
+  select(county, region, state, population, citizens, walk)
+
+counties_selected %>%
+  count(region, sort =TRUE)
+
+counties_selected %>%
+  count(state, wt = citizens)%>%
+  arrange (desc(n))
+counties
+counties_selected
+
+test <- counties_selected %>%
+  mutate(population_walk = population*walk/100)%>%
+  count(state,  wt = population_walk, sort = TRUE)
+
+test %>%
+  select(state, number=n)
+
+
+```
+
+Summarizing
+
+```{r}
+
+counties_selected <- counties %>%
+  select(county, population, income, unemployment)
+  
+counties_selected %>%
+  summarize(min_population = min(population), max_unemployment = max(unemployment), average_income = mean(income))
+
+counties_selected <- counties %>%
+  select(state, county, population, land_area)
+
+counties_selected %>%
+  group_by(state)%>%
+  summarize(total_area = sum(land_area), total_population = sum(population))
+
+counties
+
+counties_selected <- counties %>%
+  select (region, state, county, population)
+
+counties_selected %>%
+  group_by(region, state)%>%
+  summarize (total_pop = sum(population))%>%
+  summarize(average_pop = mean(total_pop), median_pop = median(total_pop))
+  
+```
+
+the top_n Verb
+
+```{r}
+
+counties_selected <- counties %>%
+  select(region, state, county, metro, population, walk)
+
+counties_selected %>%
+  group_by(region)%>%
+  top_n(2, walk)
+
+counties_selected <- counties %>%
+  select(region, state, county, population, income)
+
+counties_selected%>%
+  group_by(region, state)%>%
+  summarize(average_income = mean(income))%>%
+  #ungroup()%>%
+  top_n(1, average_income)
+  
+
+
+```
+
+```{r}
+
+counties_selected <- counties %>%
+  select(state, metro, population)
+
+counties_selected %>%
+  group_by(state, metro)%>%
+  summarize(total_pop = sum(population))%>%
+  top_n(1, total_pop)%>%
+  ungroup()%>%
+  count(metro, wt = total_pop)
+
+```
+
