--- a/Sesion7JDTR.Rmd
+++ b/Sesion7JDTR.Rmd
@@ -87,4 +87,20 @@ sets%>%
   inner_join(themes, by = c("theme_id" = "id"))
 ```
 
+```{r}
+library(tidyverse)
+library(ggplot2)
+
+view(parts)
+view(part_categories)
+
+view_parts <- parts%>%
+  inner_join(part_categories, by = c("part_cat_id"="id"))
+
+view(view_parts)
+
+view_parts <- parts%>%
+  inner_join(part_categories, by = c("part_cat_id"="id"),suffix = c("_parts", "_parts_categories"))
+
+```
 
